--- a/templates/home/index3.html
+++ b/templates/home/index3.html
@@ -304,7 +304,7 @@
   <!-- Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <!-- AdminLTE -->
-  <script src="/static/assets/js/adminlte.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/js/adminlte.min.js"></script>
 
   <!-- OPTIONAL SCRIPTS -->
   <script src="/static/assets/plugins/chart.js/Chart.min.js"></script>
