--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -23,9 +23,8 @@
     {% include 'includes/footer.html' %}
 
     <!-- Control Sidebar -->
-    <aside class="control-sidebar control-sidebar-dark">
-        <!-- Control sidebar content goes here -->
-    </aside>
+    <!-- <aside class="control-sidebar control-sidebar-dark">
+    </aside> -->
     <!-- /.control-sidebar -->
 
 </div>
