Form Users & DataTables

--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -33,7 +33,7 @@
           </a>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a href="/page/users" class="nav-link {% if 'users' in segment %} active {% endif %}">
+              <a href="/page/users/" class="nav-link {% if 'users' in segment %} active {% endif %}">
                 <i class="lni lni-user nav-icon"></i>
                 <p>Users</p>
               </a>
