--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>
-    {{app_name}} - {% block title %}{% endblock %}
+    {% block title %}{% endblock %} - {{app_name}}
   </title> 
 
   {% block stylesheets %}{% endblock stylesheets %}
