--- a/templates/page/system/users/form.html
+++ b/templates/page/system/users/form.html
@@ -34,7 +34,7 @@
                     <h3 class="card-title mt-2">Akun Manajemen</h3>
                 </div>
                 <div class="col-sm-6">
-                    <div class="float-end"><button type="button" id="btnBack" class="btn btn-block btn-secondary btn-sm">KEMBALI</button></div>
+                    <div class="float-end"><button type="button" class="btn btn-block btn-secondary btn-sm btnBack">KEMBALI</button></div>
                 </div>
             </div>
         </div><!-- /.container-fluid -->
@@ -49,7 +49,31 @@
                         <div class="card-header">
                         </div>
                         <!-- /.card-header -->
-                        
+                        <div class="card-body">
+                            <form id="form_">
+                                <input type="hidden" id="id" {% if user %} value="{{user.id}}" {% endif %}>
+                                <div class="mb-3">
+                                    <label for="full_name" class="form-label">Nama Lengkap</label>
+                                    <input type="text" class="form-control" name="full_name" placeholder="Nama Lengkap" {% if user %} value="{{user.full_name}}" {% endif %}>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="username" class="form-label">User Akun</label>
+                                    <input type="text" class="form-control" name="username" placeholder="User" {% if user %} value="{{user.username}}" readonly {% endif %}>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="email" class="form-label">Email</label>
+                                    <input type="email" class="form-control" name="email" placeholder="email@contoh.com" {% if user %} value="{{user.email}}" readonly {% endif %}>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="limit_expires" class="form-label">Limit Expired</label>
+                                    <input type="number" class="form-control" name="limit_expires" placeholder="30" {% if user %} value="{{user.limit_expires}}" {% endif %}>
+                                </div>
+                                <div class="mb-3 mt-5 float-end">
+                                    <button type="submit" class="btn btn-primary">SIMPAN</button>
+                                </div>
+
+                            </form>
+                        </div>
                         <!-- /.card-body -->
                     </div>
                     <!-- /.card -->
@@ -77,7 +101,22 @@
 <script src="https://cdn.datatables.net/v/bs5/dt-2.1.7/r-3.0.3/datatables.min.js"></script>
 <!-- AdminLTE App -->
 <script src="https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/js/adminlte.min.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.21.0/localization/messages_id.min.js" integrity="sha512-Orvt00GKq6XzBWqbltE094YknH2BN78wpQqLT/P3Jx3nhaBmEbd7JzVDJ2qLTu8J8SuMoACKoIxk851FS5ZIUA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gasparesganga-jquery-loading-overlay@2.1.7/dist/loadingoverlay.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
 <!-- ------------------- -->
+<script>
+    const api = axios.create({
+        baseURL: '/auth/users{% if user %}/{{user.id}}{% endif %}',
+        timeout: 2000,
+        headers: { 'Authorization': 'Bearer ' + Cookies.get('{{TOKEN_KEY}}') }
+    });
+</script>
 <script src="/page/users/{{clientId}}/{{sessionId}}/{{app_version}}/form.js"></script>
 
 {% endblock javascripts %}
